# codex-quota

./: .gitignore  README.md
app/: index.html  package-lock.json  package.json  一键发布正式版和便携版.cmd
app/scripts/: build-all.ps1  build.ps1  portable-updater.ps1  publish-all.ps1  release-version.ps1  verify-release.ps1
app/src/: App.svelte
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  quota.rs  tray.rs  updates.rs  window.rs
app/src/styles/: app.css
codex-quota-v2/: .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.ts  一键打包正式版和便携版.cmd
codex-quota-v2/scripts/: build-all.ps1  build-portable.ps1  build.ps1  dev.ps1  portable-updater.ps1  publish-all.ps1  publish-portable.ps1  release-version.ps1  verify-release.ps1
codex-quota-v2/src/: App.svelte
codex-quota-v2/src-tauri/: Cargo.toml  tauri.conf.json
codex-quota-v2/src-tauri/capabilities/: default.json
codex-quota-v2/src-tauri/src/: lib.rs  main.rs  quota.rs  tray.rs  updates.rs  window.rs
codex-quota-v2/src/styles/: app.css
docs/: 00-项目初始化与文档维护指南.md  01-项目上下文.md  02-项目逻辑说明.md  03-项目开发规范.md  04-项目经验积累.md  05-通用开发规范与经验.md
skills/codex-quota-skill/: SKILL.md
skills/codex-quota-skill/agents/: openai.yaml
skills/codex-quota-skill/scripts/: download-codex-quota.ps1
