[package]
name = "codex-quota-v2"
version = "2.0.1"
description = "Codex quota monitor for Windows"
authors = ["Codex"]
edition = "2021"

[lib]
name = "codex_quota_v2_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["io-util", "process", "time"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
