[package]
name = "codex-quota-v2"
version = "2.3.7"
description = "Codex quota monitor for Windows"
authors = ["Codex"]
edition = "2021"

[lib]
name = "codex_quota_v2_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
futures-util = "0.3.32"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["fs", "io-util", "process", "time"] }

[profile.release]
codegen-units = 16
lto = false
opt-level = "s"
panic = "abort"
strip = true
